Color changes to <main> & <body>

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Jane Smith's Profile</title>
+  <title>Michael Franco's Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
@@ -19,7 +19,7 @@
     <header>
       <img src="images/mf_color.png" alt="Pic of Michael" class="profile-image">
       <h1 class="tag name">Hello, I’m Michael.</h1>
-      <p class="tag location">I'm from Johannesburg, South Africa.</p>
+      <p class="tag location">I'm from Cape Town, South Africa.</p>
     </header>
 
     <main class="flex">
@@ -49,7 +49,7 @@
         <li><a href="#" class="social linkedin">LinkedIn</a></li>
         <li><a href="#" class="social github">Github</a></li>
       </ul>
-      <p class="copyright">Copyright 2015, Jane Smith</p>
+      <p class="copyright">Copyright 2022, Michael Franco</p>
     </footer>
   </body>
   </html>
