Updated content within the <body> area.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main class="flex">
       <div class="card">
         <h2>Background</h2>
-        <p>I’m an aspiring web designer who loves everything about the web. I've lived in lots of different places and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
+        <p>I’m an aspiring web designer who loves everything about the web. I've lived in lots of different places and have worked in a variety of fields and environments broadening my expertise and knowledge. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
         <p>I’ve been a professional cook and gardener and am a life-long learner who's always interested in expanding my skills.</p>
       </div> 
 
@@ -36,8 +36,8 @@
           <li>HTML</li>
           <li>CSS</li>
           <li>JavaScript</li>
-          <li>Ruby</li>
-          <li>Rails</li>
+          <li>PHP</li>
+          <li>Node.js.</li>
         </ul>
         <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
       </div> 
