Changes to CSS - Color

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <div class="main-nav">
         <ul class="nav">
           <li class="name">Michael Franco</li>
-          <li><a href="#">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="#">Experience</a></li>
         </ul>
     </div>
 
     <header>
-      <img src="images/mf_color.png" alt="Pic of Michael" class="profile-image">
+      <img src="images/me.png" alt="Pic of Michael" class="profile-image">
       <h1 class="tag name">Hello, I’m Michael.</h1>
       <p class="tag location">I'm from Cape Town, South Africa.</p>
     </header>
