Added background image and Twitter Link

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <main class="flex">
       <div class="card">
         <h2>Background</h2>
-        <p>I’m an aspiring web designer who loves everything about the web. I've lived in lots of different places and have worked in a variety of fields and environments broadening my expertise and knowledge. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
-        <p>I’ve been a professional cook and gardener and am a life-long learner who's always interested in expanding my skills.</p>
+        <p>I’m an passionate web designer to be who has the ability to tackle any project that will come my way. I have the ambition to challenge myself and learn new things from day to day. Working in different work spaces and meeting new people has broadened my mind and appreciate my work life balance. My websites are an extension of who I am as a creative and hard working human being. </p>
+        <p>I'm a huge football fan and love playing the guitar. My inspiration and creativity drives me to learn new skills to enhance my knowledge and grow mentally in this technological world we live in today.</p>
       </div> 
 
       <div class="card">
         <h2>Goals</h2>
-        <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
+        <p>Learning and understanding the art of web development is my life long goal. The technologies below are to broaden my knowledge as a professional web developer: </p>
         <ul class="skills">
           <li>HTML</li>
           <li>CSS</li>
@@ -39,13 +39,13 @@
           <li>PHP</li>
           <li>Node.js.</li>
         </ul>
-        <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
+        <p>It would be my honor to work for a web design firm assisting and creating works of art known as websites and web apps.</p>
       </div> 
 
     </main>
     <footer>
       <ul>
-        <li><a href="#" class="social twitter">Twitter</a></li>
+        <li><a href="https://twitter.com/TheMikeFranco" class="social twitter">Twitter</a></li>
         <li><a href="#" class="social linkedin">LinkedIn</a></li>
         <li><a href="#" class="social github">Github</a></li>
       </ul>
