--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
     </main>
     <footer>
       <ul>
-        <li><a href="https://twitter.com/TheMikeFranco" class="social twitter">Twitter</a></li>
+        <li><a href="https://twitter.com/Real_Mr_Franco" class="social twitter">Twitter</a></li>
         <li><a href="#" class="social linkedin">LinkedIn</a></li>
-        <li><a href="#" class="social github">Github</a></li>
+        <li><a href="https://github.com/francomichael" class="social github">Github</a></li>
       </ul>
       <p class="copyright">Copyright 2022, Michael Franco</p>
     </footer>
