Updating my index.html and experience.html

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <div class="main-nav">
         <ul class="nav">
           <li class="name">Michael Franco</li>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="#">Experience</a></li>
+          <li><a href="index.html" target="_blank">Home</a></li>
+          <li><a href="experience.html" target="_blank">Experience</a></li>
         </ul>
     </div>
 
     <header>
-      <img src="images/me.png" alt="Pic of Michael" class="profile-image">
+      <img src="images/profile_pic.jpg" alt="Photo of Michael Franco" class="profile-image">
       <h1 class="tag name">Hello, I’m Michael.</h1>
       <p class="tag location">I'm from Cape Town, South Africa.</p>
     </header>
@@ -45,9 +45,9 @@
     </main>
     <footer>
       <ul>
-        <li><a href="https://twitter.com/Real_Mr_Franco" class="social twitter">Twitter</a></li>
-        <li><a href="#" class="social linkedin">LinkedIn</a></li>
-        <li><a href="https://github.com/francomichael" class="social github">Github</a></li>
+        <li><a href="https://twitter.com/Real_Mr_Franco" class="social twitter" target="_blank">Twitter</a></li>
+        <li><a href="https://www.linkedin.com/in/michael-franco-13b992159" class="social linkedin" target="_blank">LinkedIn</a></li>
+        <li><a href="https://github.com/francomichael" class="social github" target="_blank">Github</a></li>
       </ul>
       <p class="copyright">Copyright 2022, Michael Franco</p>
     </footer>
